@@ -1,3 +1,14 @@
+2007-04-19  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+	* dllwrapper1/wine/win32.c: (dbgprintf),
+	(expWaitForMultipleObjects), (expCreateMutexA),
+	(expLeaveCriticalSection), (expTlsSetValue), (expTlsGetValue),
+	(expGetCommandLineW), (expEnumDisplayMonitors),
+	(expGetMonitorInfoA), (expCreateDirectoryA), (exp_malloc_dbg),
+	(expCreatePalette), (exprealloc), (add_stub), (LookupExternal):
+	  added one more symbol
+
 2007-02-20  Stefan Kost  <ensonic@users.sf.net>
 
 	* src/bmltest_process.c: (test_process):
